# 2GIS_test_assign

./: CMakeLists.txt  LICENSE  Main.qml  README.md  executor.cpp  executor.h  fileworker.cpp  fileworker.h  main.cpp  wordcount.cpp  wordcount.h
